--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,6 @@
     "name": "Sistema Bibliotecario CBTis147",
     "short_name": "SiBiTis147",
     "description": "Aplicación Web Progresiva sobre el catálogo  de libros del CBTis",
-    "theme_color": "#6694B5",
-    "background_color": "#FFFFFF",
     "orientation": "portrait",
     "display": "standalone",
     "start_url": "./index.html?utm_source=web_app_manifest",
@@ -30,5 +28,7 @@
             "sizes": "16x16",
             "type": "image/png"
         }
-    ]
+    ],
+    "background_color":"#FFFFFF",
+    "theme_color":"#6694B5"
 }
