--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,6 @@
     "name": "Sistema Bibliotecario CBTis147",
     "short_name": "SiBiTis147",
     "description": "Aplicación Web Progresiva sobre el catálogo  de libros del CBTis",
-    "theme_color": "#fa8296",
     "orientation": "portrait",
     "display": "standalone",
     "start_url": "./index.html?utm_source=web_app_manifest",
@@ -29,5 +28,7 @@
             "sizes": "16x16",
             "type": "image/png"
         }
-    ]
+    ],
+    "background_color":"#FFFFFF",
+    "theme_color":"#6694B5"
 }
